correct spacing issue on generic streaming page

--- a/workbench/static/style/master.css
+++ b/workbench/static/style/master.css
@@ -406,7 +406,7 @@ table.sortable tr.sortBottom td {
     color: rgb(66, 150, 231);
 }
 
-#toggleShowPolling, #clearStream{
+#toggleShowPolling, #clearStream {
     float: right;
     margin-left: 5px;
 }
@@ -414,4 +414,8 @@ table.sortable tr.sortBottom td {
 #streamContainer #pollIndicator {
     margin-left: 2px;
     display: none;
+}
+
+#selectedTopic {
+    width: 151px;
 }
